[gd_scene load_steps=5 format=3 uid="uid://cfmpa51r28sam"]

[ext_resource type="Script" uid="uid://duy0ccmd63xn" path="res://chase_monster.gd" id="1_c03k5"]
[ext_resource type="PackedScene" uid="uid://c7dmakwpaiuqv" path="res://models/weepingAngel/SoldierStatue.glb" id="1_cfadg"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_cfadg"]
height = 2.67704

[sub_resource type="CylinderShape3D" id="CylinderShape3D_c03k5"]

[node name="chaseMonster" type="CharacterBody3D"]
script = ExtResource("1_c03k5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0603167, 1.39746, 0.188347)
shape = SubResource("CapsuleShape3D_cfadg")

[node name="SoldierStatue" parent="." instance=ExtResource("1_cfadg")]
transform = Transform3D(-0.999999, 0, -0.00158826, 0, 1, 0, 0.00158826, 0, -0.999999, 0.0623249, -2.38419e-07, 0.280036)

[node name="HitArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitArea"]
transform = Transform3D(2.44131, 0, 0, 0, 1.69846, 0, 0, 0, 2.58495, -0.0917778, 1.63422, 0.3197)
shape = SubResource("CylinderShape3D_c03k5")

[node name="SightRay" type="RayCast3D" parent="."]

[connection signal="body_entered" from="HitArea" to="." method="_on_hit_area_body_entered"]
